--- a/debian/rules
+++ b/debian/rules
@@ -11,6 +11,9 @@ include /usr/share/cdbs/1/rules/utils.mk
 
 DEB_COMPRESS_EXCLUDE := .py .pdf .ufl
 
+OP2_DIR := /usr
+export OP2_DIR
+
 USCAN_DESTDIR := $(CURDIR)
 
 get-orig-source:
