--- a/debian/rules
+++ b/debian/rules
@@ -11,8 +11,8 @@ include /usr/share/cdbs/1/rules/utils.mk
 
 DEB_COMPRESS_EXCLUDE := .py .pdf .ufl
 
-OP2_DIR := /usr
-export OP2_DIR
+OP2_PREFIX := /usr
+export OP2_PREFIX
 
 USCAN_DESTDIR := $(CURDIR)
 
