Travis uses make targets for testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,5 @@ before_install:
 install: "python setup.py develop"
 # command to run tests
 script:
-  - "flake8"
-  - "py.test test --backend=sequential"
-  - "py.test test --backend=openmp"
+  - make lint
+  - PYTEST_VERBOSE=1 make unit_sequential regression_sequential unit_openmp regression_openmp
